# kraken

./: .env  .gitignore  Jenkinsfile  Procfile  README.rst  alembic.ini  azure-pipeline.yml  celery_app.py  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/dependencies/: auth.py  fetch_params.py  get_db.py  kraken.py  pagination_params.py
app/api/routes/: api.py  auth_controller.py  instagram_controller.py  kraken_controller.py  parameters_controller.py  reddit_controller.py  tiktok_controller.py  twitch_controller.py  twitter_controller.py  youtube_controller.py
app/auth/: auth_bearer.py  auth_handler.py
app/config/: config.py  logger.py
app/db/: uow.py
app/db/migrations/: env.py
app/db/repositories/: auto_tasks_repository.py  base_repository.py  instagram_tasks_repository.py  kraken_clips_repository.py  kraken_repository.py  parameters_repository.py  reddit_send_message_repository.py  reddit_tasks_repository.py  (+6 more)
app/integrations/: InstagramAPI.py  Instagram_bot_integration.py  graph_api.py  instagram_integration.py  reddit_integration.py  telegram_integration.py  tiktok_integration.py  twitch_integration.py  twitter_integration.py  twitter_selenium_integration.py  youtube_integration.py
app/services/: auth_service.py  instagram_bot_service.py  instagram_service.py  kraken_services.py  parameters_services.py  reddit_service.py  tiktok_service.py  twitch_service.py  twitter_service.py  youtube_service.py
app/tasks/: __init__.py  base.py  tasks.py
docker/: dockerfile.beat  dockerfile.celery
tests/: test_kraken.py
(+69 files in other folders)
